fitted joint working

--- a/preprocess_data.ipynb
+++ b/preprocess_data.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,11 +397,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_1[['unemployed', 'age']] = data_1[['unemployed', 'age']].apply(pd.to_numeric, errors='coerce')\n",
+    "data_1[['unemployed']] = data_1[['unemployed']].apply(pd.to_numeric, errors='coerce')\n",
     "data_2[['unemployed']] = data_2[['unemployed']].apply(pd.to_numeric, errors='coerce')\n",
     "merged_data = pd.merge(data_1, data_2, on=['year', 'duration'])\n",
     "merged_data = pd.merge(merged_data, data_3, on='year', how='inner')"
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "      <th>0</th>\n",
        "      <td>2010</td>\n",
        "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>15-24</td>\n",
        "      <td>under 5</td>\n",
        "      <td>4700.0</td>\n",
        "      <td>male</td>\n",
@@ -495,7 +495,7 @@
        "      <th>1</th>\n",
        "      <td>2010</td>\n",
        "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>15-24</td>\n",
        "      <td>under 5</td>\n",
        "      <td>4700.0</td>\n",
        "      <td>male</td>\n",
@@ -509,7 +509,7 @@
        "      <th>2</th>\n",
        "      <td>2010</td>\n",
        "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>15-24</td>\n",
        "      <td>under 5</td>\n",
        "      <td>4700.0</td>\n",
        "      <td>male</td>\n",
@@ -523,7 +523,7 @@
        "      <th>3</th>\n",
        "      <td>2010</td>\n",
        "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>15-24</td>\n",
        "      <td>under 5</td>\n",
        "      <td>4700.0</td>\n",
        "      <td>male</td>\n",
@@ -537,7 +537,7 @@
        "      <th>4</th>\n",
        "      <td>2010</td>\n",
        "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>15-24</td>\n",
        "      <td>under 5</td>\n",
        "      <td>4700.0</td>\n",
        "      <td>male</td>\n",
@@ -552,12 +552,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   year sex_x  age duration  unemployed_x sex_y  \\\n",
-       "0  2010  male  NaN  under 5        4700.0  male   \n",
-       "1  2010  male  NaN  under 5        4700.0  male   \n",
-       "2  2010  male  NaN  under 5        4700.0  male   \n",
-       "3  2010  male  NaN  under 5        4700.0  male   \n",
-       "4  2010  male  NaN  under 5        4700.0  male   \n",
+       "   year sex_x    age duration  unemployed_x sex_y  \\\n",
+       "0  2010  male  15-24  under 5        4700.0  male   \n",
+       "1  2010  male  15-24  under 5        4700.0  male   \n",
+       "2  2010  male  15-24  under 5        4700.0  male   \n",
+       "3  2010  male  15-24  under 5        4700.0  male   \n",
+       "4  2010  male  15-24  under 5        4700.0  male   \n",
        "\n",
        "                    highest_qualification  unemployed_y median_dur_of_unemp  \\\n",
        "0                       primary and below        2600.0                   8   \n",
@@ -574,7 +574,7 @@
        "4                2.5         0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,36 +588,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "year           object\n",
-      "sex            object\n",
-      "age           float64\n",
-      "duration       object\n",
-      "unemployed    float64\n",
-      "dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(data_1.dtypes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
+      "[[165900. 105000.]\n",
+      " [ 80000. 106900.]\n",
+      " [130400. 112800.]\n",
+      " [137800. 126100.]\n",
+      " [152800. 237800.]]\n"
      ]
     }
    ],
@@ -640,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -653,20 +635,13 @@
       " [ 81300.  95000.]\n",
       " [ 53500.  76200.]\n",
       " [121600. 117800.]]\n",
-      "[]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[26], line 22\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# aggregates = [\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m#     {'dim': [0, 2], 'total': qual_sex_marginal},   # qualification × sex\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m#     {'dim': [1, 2], 'total': age_sex_marginal}    # age × sex\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# ]\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# Apply IPF\u001b[39;00m\n\u001b[1;32m     21\u001b[0m ipf_fitter \u001b[38;5;241m=\u001b[39m ipfn\u001b[38;5;241m.\u001b[39mipfn\u001b[38;5;241m.\u001b[39mipfn(initial_guess, aggregates, dimensions)\n\u001b[0;32m---> 22\u001b[0m fitted_joint \u001b[38;5;241m=\u001b[39m \u001b[43mipf_fitter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miteration\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFitted joint shape:\u001b[39m\u001b[38;5;124m\"\u001b[39m, fitted_joint\u001b[38;5;241m.\u001b[39mshape)  \u001b[38;5;66;03m# (qualifications, ages, sexes)\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.12/site-packages/ipfn/ipfn.py:274\u001b[0m, in \u001b[0;36mipfn.iteration\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    272\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m ((i \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_itr \u001b[38;5;129;01mand\u001b[39;00m conv \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconv_rate) \u001b[38;5;129;01mand\u001b[39;00m (i \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_itr \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mabs\u001b[39m(conv \u001b[38;5;241m-\u001b[39m old_conv) \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrate_tolerance)):\n\u001b[1;32m    273\u001b[0m     old_conv \u001b[38;5;241m=\u001b[39m conv\n\u001b[0;32m--> 274\u001b[0m     m, conv \u001b[38;5;241m=\u001b[39m \u001b[43mipfn_method\u001b[49m\u001b[43m(\u001b[49m\u001b[43mm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43maggregates\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdimensions\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mweight_col\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    275\u001b[0m     conv_list\u001b[38;5;241m.\u001b[39mappend(conv)\n\u001b[1;32m    276\u001b[0m     i \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.12/site-packages/ipfn/ipfn.py:110\u001b[0m, in \u001b[0;36mipfn.ipfn_np\u001b[0;34m(self, m, aggregates, dimensions, weight_col)\u001b[0m\n\u001b[1;32m    108\u001b[0m     table_update \u001b[38;5;241m=\u001b[39m tables[inc \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m    109\u001b[0m     table_current \u001b[38;5;241m=\u001b[39m tables[inc]\n\u001b[0;32m--> 110\u001b[0m \u001b[43m\u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mdimension\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mdimensions\u001b[49m\u001b[43m[\u001b[49m\u001b[43minc\u001b[49m\u001b[43m]\u001b[49m\u001b[43m:\u001b[49m\n\u001b[1;32m    111\u001b[0m \u001b[43m    \u001b[49m\u001b[43mproduct_elem\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[43mdimension\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    112\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m product(\u001b[38;5;241m*\u001b[39mproduct_elem):\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+      "[[165900. 105000.]\n",
+      " [ 80000. 106900.]\n",
+      " [130400. 112800.]\n",
+      " [137800. 126100.]\n",
+      " [152800. 237800.]]\n",
+      "ipfn converged: convergence_rate not updating or below rate_tolerance\n",
+      "Fitted joint shape: (6, 5, 2)\n"
      ]
     }
    ],
@@ -678,7 +653,7 @@
     "\n",
     "# Initial guess: uniform ones\n",
     "initial_guess = np.ones((num_qualifications, num_ages, num_sexes))\n",
-    "dimensions = [num_qualifications, num_ages, num_sexes]\n",
+    "dimensions = [[0, 2], [1, 2]]\n",
     "\n",
     "\n",
     "# Define aggregates (constraints)\n",
@@ -696,13 +671,6 @@
     "\n",
     "print(\"Fitted joint shape:\", fitted_joint.shape)  # (qualifications, ages, sexes)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
