--- a/preprocess_data.ipynb
+++ b/preprocess_data.ipynb
@@ -2,24 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting ipfn\n",
-      "  Downloading ipfn-1.4.4-py2.py3-none-any.whl.metadata (7.9 kB)\n",
+      "Requirement already satisfied: ipfn in /Users/prerana1298/miniconda3/lib/python3.12/site-packages (1.4.4)\n",
       "Requirement already satisfied: pandas>=0.22.0 in /Users/prerana1298/miniconda3/lib/python3.12/site-packages (from ipfn) (2.2.2)\n",
       "Requirement already satisfied: numpy in /Users/prerana1298/miniconda3/lib/python3.12/site-packages (from ipfn) (1.26.4)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/prerana1298/miniconda3/lib/python3.12/site-packages (from pandas>=0.22.0->ipfn) (2.9.0.post0)\n",
       "Requirement already satisfied: pytz>=2020.1 in /Users/prerana1298/miniconda3/lib/python3.12/site-packages (from pandas>=0.22.0->ipfn) (2024.1)\n",
       "Requirement already satisfied: tzdata>=2022.7 in /Users/prerana1298/miniconda3/lib/python3.12/site-packages (from pandas>=0.22.0->ipfn) (2025.1)\n",
       "Requirement already satisfied: six>=1.5 in /Users/prerana1298/miniconda3/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas>=0.22.0->ipfn) (1.16.0)\n",
-      "Downloading ipfn-1.4.4-py2.py3-none-any.whl (7.4 kB)\n",
-      "Installing collected packages: ipfn\n",
-      "Successfully installed ipfn-1.4.4\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -30,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +176,7 @@
        "4  2010  male  15-24  20 to 24        500"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +272,7 @@
        "4  2010  male     primary and below  20 to 24       1300"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +350,7 @@
        "4  1996                   4"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +570,7 @@
        "4                2.5         0  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
