--- a/preprocess_data.ipynb
+++ b/preprocess_data.ipynb
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
        "[100 rows x 12 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,6 +1533,35 @@
     "# Allocate unemployed counts across duration\n",
     "merged_df['estimated_unemployed'] = merged_df['joint_count'] * merged_df['hybrid_probability']\n",
     "merged_df.tail(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7560, 12)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df.to_csv(\"datasets/unemployment_survival_data.csv\", index=False)"
    ]
   },
   {
